Changes made for sending / accepting invitations. Plus a few UI changes to mobile and desktop

--- a/WebApplication1/wwwroot/CSS/g5Desk.css
+++ b/WebApplication1/wwwroot/CSS/g5Desk.css
@@ -13,6 +13,12 @@ select, option, input[type=text], input[type=password] {
     font-size: 14px;
 }
 
+/* max-width =col3 - col2 -10 */
+select{
+  width: 100%;
+  max-width: 120px;
+}
+
 div {
     font-size: 14px;
 }
