--- a/WebApplication1/wwwroot/CSS/g5MobilePortrait.css
+++ b/WebApplication1/wwwroot/CSS/g5MobilePortrait.css
@@ -18,6 +18,21 @@ button {
   color: white;
 }
 
+.butPageOn {
+  /* button that changes page / tab which we are on */
+  cursor: none;
+  border-radius: 0px;
+  border: none;
+  background-color: black;
+  color: green;
+}
+
+.butPageSpan {
+  /* span that contains butpages. Want background all same */
+  background-color: darkgrey;
+  border: 5px solid darkgrey;
+}
+
 select, option, input[type=text], input[type=password] {
     font-size: 30px;
 }
